//   AmidaManAnimetorParameters.cs

using System.Collections.Generic;
using UnityEngine;

namespace GoToYou.Detail.GameStage.People
{
    /// <summary>
    /// 
    /// AnimetorParameters
    /// </summary>
    public static class AmidaManAnimatorParameters
    {
        public const string Idle = "Idle";
        public const string Walk = "Walk";
        public const string FallBack = "FallBack";
        public const string Dance = "Dance";
        public const string Run = "Run";
        public const string LookUpIdle = "LookUpIdle";
    }
}