//  AgentAnimetorParameters.cs

using System.Collections.Generic;
using UnityEngine;

namespace GoToYou.Detail.GameStage.Saboteur
{
    /// <summary>
    /// 
    /// AnimetorParameters
    /// </summary>
    public static class AgentAnimatorParameters
    {
        public const string Idle = "Idle";
        public const string Attack = "Attack";
        public const string Walk = "Walk";
        public const string LookUpIdle = "LookUpIdle";
    }
}